# LuchsingerPowerModel

./: README.md  pyproject.toml
data/: kitepower V3_20.yml  kitepower V3_25.yml  kitepower V3_Mark.yml  simulation_settings_config.yml  soft_kite_pumping_ground_gen_system.yml  wind_resource.yml
results/: luchsinger_extended.yml  luchsinger_original.yml  luchsinger_power_curves.yml  luchsinger_power_curves_OG.yml
scripts/: calculate_power_curves.py  plot_power_curves.py
src/power_luchsinger/: __init__.py  calculations.py  config_loader.py  plotting.py  power_model.py  powercurve_const_LoD_in.py
