[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "power-luchsinger"
version = "1.0.0"
description = "A configurable power model for pumping kite airborne wind energy systems based on the Luchsinger model."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "matplotlib>=3.4.0",
    "awesio @ git+https://github.com/awegroup/awesIO.git",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
